feat: Add new blog posts, a dynamic blog post page, and a MobileNav component.

--- a/posts/acme-case-study.mdx
+++ b/posts/acme-case-study.mdx
@@ -2,67 +2,67 @@
 title: "Case Study: How Acme Corp Reduced Meeting Time by 40%"
 slug: "acme-case-study"
 category: "Case Studies"
-date: "2024-05-10"
+date: "2025-12-25"
 readTime: "7 min read"
-excerpt: "Discover how Acme Corporation transformed their meeting culture using smart scheduling strategies."
+excerpt: "Discover how Acme Corporation transformed their meeting culture and reclaimed 9+ hours per week using smart scheduling strategies."
 coverImage: "/blog/case-study-cover.png"
 author: "Emily Roberts"
 featured: false
 ---
 
-Acme Corporation, a mid-sized tech company with 200 employees, was drowning in meetings. The average employee spent 23 hours per week in meetings—leaving precious little time for actual work. Here's how they turned things around.
+Acme Corporation, a fast-growing tech company with 200 employees, was facing a silent productivity killer: **meeting overload**.
 
-## The Challenge
+The data was staggering: the average employee spent **23 hours per week** in meetings, leaving less than 50% of their time for high-impact work. Here is how they leveraged smart scheduling strategies to reclaim their calendar and transform their culture.
 
-Like many growing companies, Acme had developed a meeting-heavy culture. Decision-making required sync-ups, sync-ups required status updates, and status updates became weekly rituals that no one questioned.
+## The Challenge: A Culture of "Sync-ups"
 
-**The symptoms were clear:**
-- Calendar fragmentation (few blocks longer than 30 minutes)
-- Meeting fatigue and declining engagement
-- Critical work happening after hours
-- Top talent citing "too many meetings" in exit interviews
+As Acme scaled, "calendar fragmentation" became the norm. Employees struggled with "Swiss cheese" schedules—small 15-to-30-minute gaps between meetings that made deep work impossible.
 
-## The Solution
+**The symptoms were undeniable:**
+- **Chronic Fatigue:** Teams reported declining engagement and meeting burnout.
+- **After-Hours Work:** Critical tasks were being pushed to evenings and weekends.
+- **Talent Attrition:** Top performers cited "excessive administrative overhead" as a key reason for leaving.
 
-Acme partnered with us to implement a comprehensive scheduling overhaul. The approach combined tool adoption with cultural change.
+## The Solution: A Three-Phase Overhaul
 
-### Phase 1: Audit
+Acme partnered with **TrySchedule** to implement a comprehensive scheduling framework that combined behavioral change with smart tool adoption.
 
-We helped Acme audit their existing meetings. The findings were eye-opening:
-- 60% of recurring meetings had no clear agenda
-- 40% of attendees in any given meeting were optional
-- Average meeting ran 15 minutes over scheduled time
+### Phase 1: The Meeting Audit
+We helped Acme analyze their recurring calendar invites. The findings were a wake-up call:
+- **60%** of recurring meetings lacked a written agenda.
+- **40%** of participants were marked as "optional" but felt obligated to attend.
+- Most meetings ran 15 minutes over time due to a lack of structure.
 
-### Phase 2: Policy Implementation
+### Phase 2: Policy & "Deep Work" Guardrails
+Acme introduced new cultural norms to protect employee time:
+- **"No-Meeting Wednesdays":** A full day dedicated to uninterrupted deep work.
+- **Speedy Meetings:** Defaulting to 25-minute slots instead of 30, ensuring 5-minute transition breaks.
+- **Agenda-First Policy:** No agenda, no meeting.
 
-Based on the audit, Acme implemented new policies:
-- "No Meeting Wednesdays" for deep work
-- Maximum 25-minute meetings (with hard stops)
-- Required agendas for any meeting with 3+ attendees
+### Phase 3: TrySchedule Integration
+The **TrySchedule Builder** became the central hub for Acme’s organization. Key features used include:
+- **Smart Conflict Detection:** Reducing the back-and-forth of finding free slots.
+- **Visual Time Blocking:** Helping managers see "Focus Time" vs. "Meeting Time" at a glance.
+- **Meeting Cost Awareness:** Showing the aggregate time-value of large group invites.
 
-### Phase 3: Tool Adoption
+## The Results: Measureable Impact
 
-Schedule Builder became the central hub for all scheduling decisions. Key capabilities deployed:
-- Automatic conflict detection
-- Meeting cost calculator (showing aggregate salary time)
-- Smart suggestions for optimal meeting times
-
-## The Results
-
-After three months, the transformation was measurable:
+After 90 days of using **TrySchedule**, the results exceeded all expectations:
 
 | Metric | Before | After | Change |
-|--------|--------|-------|--------|
-| Weekly meeting hours | 23 hrs | 14 hrs | -40% |
-| Focus time blocks (2+ hrs) | 2/week | 6/week | +200% |
-| Meeting satisfaction score | 5.2/10 | 7.8/10 | +50% |
+| :--- | :--- | :--- | :--- |
+| **Weekly Meeting Hours** | 23 hrs | 14 hrs | **-40%** |
+| **Focus Time Blocks (2+ hrs)** | 2/week | 6/week | **+200%** |
+| **Employee Satisfaction** | 5.2/10 | 7.8/10 | **+50%** |
 
-## Lessons Learned
+## Lessons for Your Team
 
-1. **Tools aren't enough:** Cultural buy-in from leadership was essential
-2. **Start with quick wins:** No Meeting Wednesdays showed immediate impact
-3. **Measure and share:** Sharing metrics weekly kept the momentum
+- **Cultural Buy-in is Key:** Tools provide the data, but leadership must model the behavior.
+- **Start with "No-Meeting" Zones:** Immediate wins like No-Meeting Wednesdays build momentum.
+- **Audit Regularly:** Use scheduling data to identify and kill "zombie meetings" that no longer serve a purpose.
 
-## Your Turn
+## Ready to Reclaim Your Time?
 
-Is your organization ready to reclaim meeting time? Contact us to learn how Schedule Builder can help you achieve similar results.
+Don't let your team drown in meetings. Whether you're a startup or an established enterprise, smart scheduling can transform your productivity.
+
+**[TrySchedule for Free](https://www.tryschedule.com/templates)** to see how our visual builder can help your team focus on what matters most.
